# nhl

./: CMakeLists.txt
.github/workflows/: ci.yml  feature ci.yml
benchmarks/: CMakeLists.txt  math_benchmark.cpp
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/nhl/: conference.h  division.h  game.h  league.h  lottery.h  old_code.txt  print.h  schedule.h  standings.h  team.h  team_record.h  text_literals.h
include/nhl/lottery/: ball.h  combination.h  combination_table.h  combination_value.h  lottery.h  machine.h  odds.h  print.h  ranking.h  ranking_combinations.h  round.h  stats.h  team.h  teams.h  winners.h
include/nhl/math/: cmath.h  percentage.h
tests/: CMakeLists.txt  team_tests.cpp  text_literals_tests.cpp
tests/lottery/: combination_table_tests.cpp  combination_value_tests.cpp  lottery_odds_tests.cpp  ranking_combinations_tests.cpp  ranking_tests.cpp
tests/math/: cmath_tests.cpp
